--- a/Integrations/appsettings.json
+++ b/Integrations/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Database=elearning;User Id=ed;Password=YourPassword;"
+  }
 }
